Closed Bug 453706 Opened 17 years ago Closed 17 years ago

Lingering nsISupportsArray in ProfileMigrator.cpp

Categories

(Thunderbird :: Migration, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0a3

People

(Reporter: connor.behan, Assigned: connor.behan)

References

Details

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.1) Gecko/2008072612 GranParadiso/3.0.1 Build Identifier: 3.0b1pre The fix appeared to be trivial and not break the build. This is basically practice for more nsISupportsArray classes that I plan to take out. Reproducible: Always Steps to Reproduce: 1. 2. 3.
Blocks: 394167
Version: unspecified → Trunk
Attached patch Fix (obsolete) — Splinter Review
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → ASSIGNED
Assignee: nobody → connor.behan
Attachment #336918 - Flags: superreview?(dmose)
Attachment #336918 - Flags: review?(dmose)
Attachment #336918 - Flags: superreview?(dmose)
Attachment #336918 - Flags: review?(dmose)
Attachment #336918 - Flags: review+
Comment on attachment 336918 [details] [diff] [review] Fix Since this is part of the mail/ directory, sr isn't necessary. r=dmose; thanks for the patch!
Keywords: checkin-needed
OS: Linux → All
Hardware: PC → All
Comment on attachment 336918 [details] [diff] [review] Fix + nsCOMPtr<nsIMutableArray> params; + params = do_CreateInstance(NS_ARRAY_CONTRACTID); actually, this should all be on one line, like this: nsCOMPtr<nsIMutableArray> params(do_CreateInstance(NS_ARRAY_CONTRACTID);
Connor, please could you attach a new patch with comment 3 addressed (no need to request reviews again), and add "checkin-needed" into the keywords field once you've done that. Thanks.
Keywords: checkin-needed
Keywords: checkin-needed
Attachment #337164 - Attachment description: Addresses comment 3 (but closes the bracket). → Addresses comment 3 (but closes the bracket) [Checkin: Comment 6]
Status: ASSIGNED → RESOLVED
Closed: 17 years ago17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: