Bug 453706 - Lingering nsISupportsArray in ProfileMigrator.cpp; r=dmose